Some minor css spacing fixes.

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -31,7 +31,6 @@ body
   text-align: center
   margin-top: 10%
   h1
-    padding-bottom: 0
     font-family: 'Francois One', sans-serif
     margin: 0
     .intro
@@ -41,6 +40,9 @@ body
       text-transform: uppercase
       margin: 0
       padding: 0
+  p
+    padding: 0
+    margin: 5px 0 10px 0
   img
     margin-top: $y-margin
     margin-left: auto
@@ -50,5 +52,8 @@ body
     border-radius: 50%
   #social-links
     i
-      padding: 5px 10px
+      padding: 10px 10px
       font-size: 2em
+    a
+      color: $text-color
+      text-decoration: none
